# sentiment-analysis-for-interviews

./: .flake8  .gitignore  ARCHITECTURE.md  README.md  config.yaml  main.py  pyproject.toml
src/: __init__.py
src/analysis/: __init__.py  qa_pairer.py  question_classifier.py  sentiment.py  speaker_mapper.py
src/audio/: __init__.py  converter.py  diarizer.py  segmenter.py  transcriber.py
src/config/: __init__.py  environment.py  paths.py  settings.py
src/models/: __init__.py  analysis.py  interview.py  segment.py
src/output/: __init__.py  report_generator.py
src/pipeline/: __init__.py  runner.py
src/utils/: __init__.py  cleanup.py  progress.py
tests/: README.md  conftest.py
tests/analysis/: test_sentiment.py
tests/audio/: test_audio.py
tests/config/: __init__.py  test_environment.py  test_paths.py
tests/models/: test_models.py
tests/output/: test_report_generator.py
tests/pipeline/: test_runner.py
tests/utils/: test_cleanup.py
